<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_PowerNC" Id="{82bac45d-f3fb-4090-96f5-9cec57f017c8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PowerNC IMPLEMENTS I_Power
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
    {attribute 'no_copy'}
    AxisRef : REFERENCE TO AXIS_REF;
    fbMcPower : MC_Power;
    bEnable	: BOOL;
    bEnablePositive : BOOL;
    bEnableNegative : BOOL;
    bPowerIsEnabled : BOOL;
    bBusy 		: BOOL;
    bError 	: BOOL;
    nErrorID 	: UDINT;
    fOverride 	: LREAL := 100.0;
    eBufferMode : MC_BufferMode := MC_BufferMode.MC_Aborting;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//////////////////////////////////////////////////////////////////
// Power block depends on interlocks check in  iMotionInterlocks
/////////////////////////////////////////////////////////////////
THIS^.fbMcPower(
    Axis := THIS^.AxisRef,
    Enable := THIS^.bEnable,
    Enable_Positive := THIS^.bEnablePositive,
    Enable_Negative := THIS^.bEnableNegative,
    Override := THIS^.fOverride,
    BufferMode := THIS^.eBufferMode,
    (*Enabled*)
    Status => THIS^.bPowerIsEnabled,
    Busy => THIS^.bBusy,
    Error => THIS^.bError,
    ErrorID => THIS^.nErrorID
);
]]></ST>
    </Implementation>
    <Method Name="FB_Init" Id="{cf7caa46-f1e4-49f9-addf-eba93ec02164}">
      <Declaration><![CDATA[//FB_Init is always available implicitly and it is used primarily for initialization.
//The return value is not evaluated. For a specific influence, you can also declare the
//methods explicitly and provide additional code there with the standard initialization
//code. You can evaluate the return value.
METHOD FB_Init: BOOL
VAR_INPUT
    bInitRetains: BOOL; // TRUE: the retain variables are initialized (reset warm / reset cold)
    bInCopyCode: BOOL;  // TRUE: the instance will be copied to the copy code afterward (online change)
    AxisRef : REFERENCE TO AXIS_REF;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.AxisRef REF= AxisRef;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Power" Id="{b859403c-f315-4c59-bb46-554245f47326}">
      <Declaration><![CDATA[METHOD Power
VAR_INPUT
    Enable	: BOOL;
    Enable_Positive	: BOOL;
    Enable_Negative	: BOOL;
    (* in percent from 0 to 100 *)
    Override	: LREAL := 100;
    BufferMode	: MC_BufferMode := .MC_BufferMode.MC_Aborting;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bEnable := Enable;
THIS^.bEnablePositive := Enable_Positive;
THIS^.bEnableNegative := Enable_Negative;
THIS^.fOverride := Override;
THIS^.eBufferMode := BufferMode ;
]]></ST>
      </Implementation>
    </Method>
    <Property Name="PowerActive" Id="{49693f07-c88b-4b06-be0c-0dc75c8f5fac}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY PowerActive : BOOL
]]></Declaration>
      <Get Name="Get" Id="{b11a8d39-0dfc-40d5-ab4e-e7fe1f8bda7c}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="PowerEnable" Id="{252a1d79-0ff2-4213-bc33-fadd45d6a3f9}">
      <Declaration><![CDATA[{attribute 'monitoring':= 'variable'}
PROPERTY PowerEnable : BOOL
]]></Declaration>
      <Set Name="Set" Id="{78f193d5-2f3f-443d-a415-e9f7293c8fc9}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bEnable := PowerEnable;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="PowerEnableNegative" Id="{1b1794f4-4634-4791-9eb2-19477f4a1359}">
      <Declaration><![CDATA[{attribute 'monitoring':= 'variable'}
PROPERTY PowerEnableNegative : BOOL
]]></Declaration>
      <Set Name="Set" Id="{52e87bba-2185-41a9-970f-712f1c1e8cb3}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bEnableNegative := PowerEnableNegative;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="PowerEnablePositive" Id="{df40771c-ae30-4e2c-81f2-674dc113ad0b}">
      <Declaration><![CDATA[{attribute 'monitoring':= 'variable'}
PROPERTY PowerEnablePositive : BOOL
]]></Declaration>
      <Set Name="Set" Id="{d16a9426-9bc2-4340-81e7-6d3075566544}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bEnablePositive := PowerEnablePositive;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="PowerError" Id="{5900c701-bb24-4682-9d2c-47b8d2773b46}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY PowerError : BOOL
]]></Declaration>
      <Get Name="Get" Id="{50fb1906-033c-485b-9e5d-f1230f94dfc8}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[PowerError := bError;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="PowerErrorID" Id="{1fe914ad-7f24-41a0-bde2-d4d693aeb73f}">
      <Declaration><![CDATA[PROPERTY PowerErrorID : UDINT
]]></Declaration>
      <Get Name="Get" Id="{8f8eef06-c2be-4844-866a-ef0542739cd8}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[PowerErrorID := nErrorID;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="PowerIsEnabled" Id="{7e136934-4440-48f5-a211-011704d8f4f5}">
      <Declaration><![CDATA[{attribute 'monitoring':= 'variable'}
PROPERTY PowerIsEnabled : BOOL
]]></Declaration>
      <Get Name="Get" Id="{fffb35ff-b9f5-44f8-bd6c-842b697893c4}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[PowerIsEnabled := bPowerIsEnabled;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="PowerOverride" Id="{2e673f3b-832a-4bb6-871d-bed0fa9c802a}">
      <Declaration><![CDATA[PROPERTY PowerOverride : LREAL
]]></Declaration>
      <Set Name="Set" Id="{afa16db1-d202-4686-a800-8bcbcd0d079e}">
        <Declaration><![CDATA[
VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[fOverride := PowerOverride;]]></ST>
        </Implementation>
      </Set>
    </Property>
  </POU>
</TcPlcObject>