<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_MotionInterlocksLimSw" Id="{158cbb88-3b97-40e2-97dc-4d7a82a1299f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MotionInterlocksLimSw IMPLEMENTS I_MotionInterlocks
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
    iMotionInterlocks : I_MotionInterlocksGeneric;
    iLimSwStatus : I_LimSwStatus;
    bError : BOOL;
    nErrorID:UDINT;
    sMessage : T_MAXSTRING;
    {attribute 'hide'}
    bNewMoveReq : BOOL;
    {attribute 'hide'}
    bEnable	: BOOL;
    {attribute 'hide'}
    bReset : BOOL;
    {attribute 'hide'}
    bMoveOk : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF THIS^.iMotionInterlocks.Error THEN
    bError := THIS^.iMotionInterlocks.Error;
    nErrorID := THIS^.iMotionInterlocks.ErrorID;
    sMessage := THIS^.iMotionInterlocks.Message;
ELSIF THIS^.iLimSwStatus.Warning THEN
    sMessage := THIS^.iLimSwStatus.Message;
END_IF
// Get General MoveOk signal
bMoveOk := THIS^.iMotionInterlocks.MoveOk;
// Forward drive cmds to Generic interlocks and lim status FB
THIS^.iMotionInterlocks.DriveCmd(Enable:=bEnable, NewMoveReq:=bNewMoveReq, Reset:=bReset);
THIS^.iLimSwStatus.DriveCmd(Enable:=bEnable, NewMoveReq:=bNewMoveReq, Reset:=bReset);]]></ST>
    </Implementation>
    <Property Name="Aborted" Id="{a1175752-7c2c-4d2c-b0ac-3a4f9f39a027}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Aborted : BOOL
]]></Declaration>
      <Get Name="Get" Id="{972c3d12-c93b-46d8-adca-4ce3ce1b4165}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Busy" Id="{a6daac7c-9df9-4ab9-ad3d-28aaab54bf26}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Busy : BOOL
]]></Declaration>
      <Get Name="Get" Id="{5a6e7c19-94f7-4fad-a884-0cab68944ddd}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Done" Id="{f89b31f3-ca38-4979-a504-0096d2187a3b}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Done : BOOL
]]></Declaration>
      <Get Name="Get" Id="{a79d952f-6f18-4524-bb34-0541fc9c86b9}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="DriveCmd" Id="{e3367cf0-cdc1-4731-8285-0f8b3c347f27}">
      <Declaration><![CDATA[METHOD DriveCmd
VAR_INPUT
    Enable	: BOOL;
    NewMoveReq	: BOOL;
    Reset	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bNewMoveReq := NewMoveReq;
bEnable	:=Enable;
bReset :=Reset;]]></ST>
      </Implementation>
    </Method>
    <Property Name="Error" Id="{e499cdfd-969f-4051-8215-bd6b1edef6bb}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Error : BOOL
]]></Declaration>
      <Get Name="Get" Id="{7238505b-9b6a-43fb-ba12-674778d8c8ff}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Error := bError;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ErrorID" Id="{9d2ee520-34ec-43b6-bfa3-0b9c47c94f72}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY ErrorID : UDINT
]]></Declaration>
      <Get Name="Get" Id="{a73c59e2-e172-4b19-8c08-958487d94121}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ErrorID := nErrorID;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="FB_Init" Id="{a7a90e7d-0c0f-4077-b585-b6d1f8caabad}">
      <Declaration><![CDATA[//FB_Init is always available implicitly and it is used primarily for initialization.
//The return value is not evaluated. For a specific influence, you can also declare the
//methods explicitly and provide additional code there with the standard initialization
//code. You can evaluate the return value.
METHOD FB_Init: BOOL
VAR_INPUT
    bInitRetains: BOOL; // TRUE: the retain variables are initialized (reset warm / reset cold)
    bInCopyCode: BOOL;  // TRUE: the instance will be copied to the copy code afterward (online change)
    iMotionInterlocks : I_MotionInterlocksGeneric;
    iLimSwStatus : I_LimSwStatus;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.iMotionInterlocks  := iMotionInterlocks ;
THIS^.iLimSwStatus := iLimSwStatus;]]></ST>
      </Implementation>
    </Method>
    <Property Name="InterlockEvent" Id="{1b30ac20-f930-48f6-8ea2-fc10757db2a2}">
      <Declaration><![CDATA[PROPERTY InterlockEvent : BOOL
]]></Declaration>
      <Get Name="Get" Id="{b809f3cc-6e7f-4e61-b45d-cf84d0c8cc87}">
        <Declaration><![CDATA[
VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[InterlockEvent := THIS^.iLimSwStatus.LimHit;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="LimBackward" Id="{3efe1368-408b-4a38-a126-80efaf55f686}">
      <Declaration><![CDATA[PROPERTY LimBackward : BOOL
]]></Declaration>
      <Get Name="Get" Id="{47d43762-1933-4100-961b-3deb6996cc97}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="LimForward" Id="{03317f4e-fbcf-4e99-b0c9-f816dfd4de35}">
      <Declaration><![CDATA[PROPERTY LimForward : BOOL
]]></Declaration>
      <Get Name="Get" Id="{a33a9dae-0469-46a1-8a1f-aafe04ffa630}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="LimHit" Id="{452e35f5-800a-4c03-922c-6304422f8f6e}">
      <Declaration><![CDATA[PROPERTY LimHit : BOOL
]]></Declaration>
      <Get Name="Get" Id="{eb844dcb-7793-498c-91eb-fa22d21a4900}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="LimHitIdling" Id="{d51cc25e-d755-40e4-b660-bc72f57d96bc}">
      <Declaration><![CDATA[PROPERTY LimHitIdling : BOOL
]]></Declaration>
      <Get Name="Get" Id="{efc7bd52-92e0-4b7d-a526-02267f44a345}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[LimHitIdling := THIS^.iLimSwStatus.LimHitIdling;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="LimHitMoving" Id="{b433f86d-ec1c-4acc-aa4f-3e242d8b5ea0}">
      <Declaration><![CDATA[PROPERTY LimHitMoving : BOOL
]]></Declaration>
      <Get Name="Get" Id="{dac1477a-95db-4e8b-8062-a0b243994a93}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[LimHitMoving := THIS^.iLimSwStatus.LimHitMoving;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="LimHome" Id="{f0cee75d-e406-443a-a413-e60195db50de}">
      <Declaration><![CDATA[PROPERTY LimHome : BOOL
]]></Declaration>
      <Get Name="Get" Id="{d346300b-4e96-4617-87d1-9a4a3ba94aa6}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Message" Id="{6b1916c5-039a-4cea-99b5-b8f805042945}">
      <Declaration><![CDATA[PROPERTY Message : T_MAXSTRING
]]></Declaration>
      <Get Name="Get" Id="{a8ad55da-d47a-4037-a50e-076da5305f40}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="MotionStatus" Id="{ef7b7a45-b002-4c41-9686-413e52bf75e3}">
      <Declaration><![CDATA[(*Not implemented for now as we directly access the interlocks in this FB*)
METHOD MotionStatus
VAR_INPUT
    HomeBusy	: BOOL;
    PositiveDirectionEnabled	: BOOL;
    NegativeDirectionEnabled	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Property Name="MoveBackwardEnabled" Id="{b178f46f-0443-44d6-a91f-16b15ef2cae5}">
      <Declaration><![CDATA[PROPERTY MoveBackwardEnabled : BOOL
]]></Declaration>
      <Get Name="Get" Id="{a268efd3-4ad6-49eb-932a-a234343d2af7}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[MoveBackwardEnabled := THIS^.iMotionInterlocks.MoveBackwardEnabled;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="MoveForwardEnabled" Id="{faed5261-6d75-4261-803b-7f0e96c07091}">
      <Declaration><![CDATA[PROPERTY MoveForwardEnabled : BOOL
]]></Declaration>
      <Get Name="Get" Id="{b3fa4ff6-04dc-4a45-b2b8-d5535c7132d2}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[MoveForwardEnabled := THIS^.iMotionInterlocks.MoveForwardEnabled;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="MoveOk" Id="{7e64ea4a-5623-4e42-ad55-52145a4215f0}">
      <Declaration><![CDATA[PROPERTY MoveOk : BOOL
]]></Declaration>
      <Get Name="Get" Id="{bb84aff3-ebbf-450c-8040-87d9eb667555}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[MoveOk := bMoveOk;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="NewMoveReq" Id="{2b18ffda-1f4d-422b-b9b7-66192b04a98e}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY NewMoveReq : BOOL
]]></Declaration>
      <Set Name="Set" Id="{33791052-1f9b-47a0-8aee-f763f4b5123d}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="PowerEnabled" Id="{9511d4c7-e78d-40e2-9d5a-6ecffc43a003}">
      <Declaration><![CDATA[PROPERTY PowerEnabled : BOOL
]]></Declaration>
      <Get Name="Get" Id="{69aad844-8aea-4c31-a561-377909ac709b}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Reset" Id="{275d74e4-bd39-4cfe-9d67-37b5af938957}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Reset : BOOL
]]></Declaration>
      <Set Name="Set" Id="{b669ae2c-78b1-4c3b-a99e-7a785c61a8c4}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[THIS^.iLimSwStatus.Reset := Reset;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="Warning" Id="{d4f46c69-4dc7-45e7-9978-5602afa06ae3}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Warning : BOOL
]]></Declaration>
      <Get Name="Get" Id="{98755ed6-4331-4fcd-ab91-87a47d6bca9e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>